force-app/main/default/objects/FS_EP_Technician_Instructions__c/FS_EP_Technician_Instructions__c.object-meta.xml
<CustomObject>
    <label>Technician Instructions</label>
    <nameField>
        <displayFormat>EPTI-{0000}</displayFormat>
        <label>EP Technician Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>