force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>Execution_Plan__c</fullName>
    <label>Execution Plan</label>
    <referenceTo>FS_Execution_Plan__c</referenceTo>
    <relationshipLabel>Technician Instructions</relationshipLabel>
    <relationshipName>Technician_Instructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>