force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>FS_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation</label>
    <type>Checkbox</type>
</CustomField>