force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Cup_Name_5__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Name_5__c</fullName>
    <label>Cup Name 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>