force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Cup_Name_6__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Name_6__c</fullName>
    <label>Cup Name 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>