force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Equip_Placement__c.field-meta.xml
<CustomField>
    <fullName>FS_Equip_Placement__c</fullName>
    <label>Equipment Placement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>