force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Equipment_Package_before_FET_4_0__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Package_before_FET_4_0__c</fullName>
    <label>Equipment Package before FET 4.0</label>
    <length>80</length>
    <type>Text</type>
</CustomField>