force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Fluid_Ounces_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Fluid_Ounces_1__c</fullName>
    <label>Fluid Ounces 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>