force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_IM_Model__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Model__c</fullName>
    <label>IM Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>