force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_IM_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Special_Instructions__c</fullName>
    <label>Special Instructions (Ice Maker)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>