force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_KO_or_DOE_Disposition_of_Removd__c.field-meta.xml
<CustomField>
    <fullName>FS_KO_or_DOE_Disposition_of_Removd__c</fullName>
    <label>KO or DOE/Disposition of Removed Equip</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOE - Remain on site</fullName>
            </value>
            <value>
                <fullName>KO - Remove and return to KO warehouse</fullName>
            </value>
            <value>
                <fullName>DOE - Remove and return to KO warehouse</fullName>
            </value>
            <value>
                <fullName>Bottler - Remove</fullName>
            </value>
            <value>
                <fullName>Return to Bottler warehouse</fullName>
            </value>
            <value>
                <fullName>None - New Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>