force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Location__c.field-meta.xml
<CustomField>
    <fullName>FS_Location__c</fullName>
    <description>It is a picklist field</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Place of Existing Filter System</fullName>
            </value>
            <value>
                <fullName>Backroom/Wall</fullName>
            </value>
            <value>
                <fullName>Underneath Self-Serve Beverage Counter</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>