force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Location_of_Syrup_Rack__c.field-meta.xml
<CustomField>
    <fullName>FS_Location_of_Syrup_Rack__c</fullName>
    <label>Location of Syrup Rack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Place of Legacy Rack</fullName>
            </value>
            <value>
                <fullName>To Left of Legacy Rack</fullName>
            </value>
            <value>
                <fullName>To Right of Legacy Rack</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>