force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Parts_SP_Needs_to_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Parts_SP_Needs_to_Order__c</fullName>
    <label>Parts SP Needs to Order</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>