force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Protocol_for_Existing_Rack__c.field-meta.xml
<CustomField>
    <fullName>FS_Protocol_for_Existing_Rack__c</fullName>
    <label>Protocol for Existing Rack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Retain and Replace Bottom Shelves</fullName>
            </value>
            <value>
                <fullName>Dry Location - No Rack On Site</fullName>
            </value>
            <value>
                <fullName>Other(Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>