force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Requirements__c</fullName>
    <label>Requirements (WF)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Required-Existing WF does not meet CCFS WF Policy-Approved WF Shipped Prior to Install</fullName>
            </value>
            <value>
                <fullName>Action Required - Outlet Not Equipped w/WF-Approved WF Shipped Prior to Install</fullName>
            </value>
            <value>
                <fullName>No Action Required-COM Sending WF to Outlet Prior to Install Approved by COM</fullName>
            </value>
            <value>
                <fullName>No Action Required Existing WF meets CCFS Policy Approved by COM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>