force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Size_4__c.field-meta.xml
<CustomField>
    <fullName>FS_Size_4__c</fullName>
    <label>Size 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>