force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Size_6__c.field-meta.xml
<CustomField>
    <fullName>FS_Size_6__c</fullName>
    <label>Size 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>