force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Type_of_Line__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Line__c</fullName>
    <label>Type of Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Five Line JET Bundle</fullName>
            </value>
            <value>
                <fullName>Reuse Existing Bundle</fullName>
            </value>
            <value>
                <fullName>Other(Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>