force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Water_Filter_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Contact_Name__c</fullName>
    <label>Water Filter Outlet Contact Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>