force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Water_Filter_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Contact_Phone__c</fullName>
    <label>Water Filter Outlet Contact Phone</label>
    <type>Phone</type>
</CustomField>