force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Water_Filter_Model_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Model_no__c</fullName>
    <label>Provide Water Filter Model#</label>
    <length>48</length>
    <type>Text</type>
</CustomField>