force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Water_Filter_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Special_Instructions__c</fullName>
    <label>Special Instructions (Water Filter)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>