force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_Who_will_install_Water_Filter__c.field-meta.xml
<CustomField>
    <fullName>FS_Who_will_install_Water_Filter__c</fullName>
    <label>Water Filter Installer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Davaco</fullName>
            </value>
            <value>
                <fullName>KO Service Provider</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>General Contractor (GC)</fullName>
            </value>
            <value>
                <fullName>Water Filter Supplier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Approved Filters Already on Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>