force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/FS_X7000_Series_Dispenser_Placement__c.field-meta.xml
<CustomField>
    <fullName>FS_X7000_Series_Dispenser_Placement__c</fullName>
    <description>Dispenser Placement</description>
    <label>Dispenser Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>Crew Serve</fullName>
            </value>
            <value>
                <fullName>Self Serve &amp; Crew Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>