force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/IM_Dispense_Soft_Ice__c.field-meta.xml
<CustomField>
    <fullName>IM_Dispense_Soft_Ice__c</fullName>
    <label>IM Dispense Soft Ice?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>