force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/Water_Filter_Installer_Name__c.field-meta.xml
<CustomField>
    <fullName>Water_Filter_Installer_Name__c</fullName>
    <label>Water Filter Installer Contact Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>