force-app/main/default/objects/FS_EP_Technician_Instructions__c/fields/Water_Filter_Installer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Water_Filter_Installer_Phone__c</fullName>
    <label>Water Filter Installer Contact Phone</label>
    <type>Phone</type>
</CustomField>