force-app/main/default/objects/FS_EP_Technician_Instructions__c/recordTypes/Technician_Instruction.recordType-meta.xml
<RecordType>
    <fullName>Technician_Instruction</fullName>
    <active>true</active>
    <description>Technician Instructions</description>
    <label>Technician Instruction</label>
</RecordType>